Fixed dark mode and mermaid diagram rendering
M	docs/css/design.css
M	mkdocs-base.yml

--- a/docs/css/design.css
+++ b/docs/css/design.css
@@ -75,7 +75,7 @@
 }
 
 :root,
-[data-md-color-scheme="percona-light"] {
+[data-md-color-scheme="default"] {
 
     /* Primitives */
     --md-hue: 220;
@@ -109,7 +109,7 @@
     --md-typeset-table-color: hsla(var(--md-hue),17%,21%,0.25)
 }
 
-[data-md-color-scheme="percona-dark"] {
+[data-md-color-scheme="slate"] {
 
     /* Primitives */
     --md-hue: 0;
@@ -268,7 +268,7 @@
     color: var(--md-typeset-color);
 }
 .md-button code,
-[data-md-color-scheme="percona-dark"] .md-button:not(.md-button--primary) code {
+[data-md-color-scheme="slate"] .md-button:not(.md-button--primary) code {
     background-color: rgba(255, 255, 255, 0.1);
     box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.1) inset;
 }
